# obsidian-rag

./: .gitignore  LICENSE  README.md  conf.yml
obsidian_rag/: app.py  config.yaml  main.py  pyproject.toml  vector_db.pkl
obsidian_rag/src/app/: __init__.py  model_settings.py  sidebar.py
obsidian_rag/src/utils/: __init__.py  api_chat.py  chat.py  config.py  embeddings.py  models.py
